<resources>
    <string name="app_name">Remember-Lizzy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Memo">Memo</string>
    <string name="Task">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memo_baru">Buat Memo Baru</string>
    <string name="task_baru">Buat Tugas Baru</string>
    <string name="judul">Judul</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="prior">Prioritas</string>
    <string name="low">Rendah</string>
    <string name="medium">Menengah</string>
    <string name="high">Tinggi</string>
    <string name="pengingat">Pengingat</string>
    <string name="buat_memo">Buat Memo</string>
    <string name="buat_task">Buat Tugas</string>
    <string name="jadwal">Jadwal</string>
    <string name="img_desc">img_desc</string>
    <string name='lgn'>Login</string>
    <string name='dft'>Daftar</string>
    <string name="ket_ver">Masukan kode verifikasi yang sudah dikirim ke user \n lidyadhanira@gmail.com </string>
    <string name="onboard1">Kelola tugas Anda dengan lebih \n efisien dan produktif.</string>
    <string name="onboard2">Tambahkan deadline dan prioritas \n untuk mengelola tugas dengan lebih efektif.</string>
    <string name="onboard3">Atur, bagikan, dan selesaikan tugas \n bersama tim secara kolaboratif.</string>
    <string name="daftar_grup">Daftar Grup</string>
    <string name="grup">Grup</string>
    <string name="progress">Progress Tugas</string>
    <string name="pro">Progress</string>
    <string name="keluar">Keluar</string>
    <string name="profil">Profil</string>
    <string name="user">Lidya Dhanira</string>
    <string name="user_email">lidyadhanira@gmail.com</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="notif">Notifikasi</string>
    <string name="setting">Pengaturan Aplikasi</string>
    <string name="memo_tugas">Memo/Tugas</string>
    <string name="terakhir">Terakhir Dilihat</string>
    <string name="create">Create Mobile App</string>
    <string name="tgl1">November 17, 2023 10:45 PM"</string>
    <string name="xyz">Tugas XYZ</string>
    <string name="jam">7:45 AM</string>
    <string name="text1">0/15</string>
    <string name="tgs_saya">Tugas Saya</string>
    <string name="edu">Edutech App</string>
    <string name="kampus">Kampus</string>
    <string name="abc">Tugas ABC</string>
    <string name="tim">Lizzy Team</string>
    <string name="selamat">Selamat Datang</string>
    <string name="tgl2">14 November 2023</string>
    <string name="all">Semua</string>
    <string name="sel">Sel</string>
    <string name="rab">Rab</string>
    <string name="kam">Kam</string>
    <string name="jum">Jum</string>
    <string name="lain">Lainnya</string>
    <string name="ketua">Ketua</string>
    <string name="tgl">Tanggal</string>
    <string name="ver_email">Verifikasi Email</string>
    <string name="verif">Verifikasi</string>
    <string name="blm">Belum menerima kode?</string>
    <string name="ulang">Kirim ulang</string>
    <string name="durasi">0:15</string>
    <string name="undang">Undang Partner</string>
    <string name="organize">Organize your team task</string>
    <string name="organ">Organize your own task</string>
    <string name="let">Let’s be productive, with us.</string>
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="team">Diskusi Grup</string>
    <string name="gabung">Gabung</string>
    <string name="cari">Cari</string>
    <string name="on">Online</string>
    <string name="off">Offline</string>
    <string name="user1">Dika Ganteng</string>
    <string name="user2">Ariana Grande</string>
    <string name="user3">Lala Laila</string>
    <string name="user4">Joko Jono</string>
    <string name="user5">Dina Cantik</string>
    <string name="user6">Dino seventeen</string>
    <string name="user7">Katarina</string>
    <string name="input_email">Masukan Email Anda</string>
    <string name="input_pass">Masukan Kata Sandi</string>
    <string name="lupa">Lupa kata sandi?</string>
    <string name="email">Email</string>
    <string name="awal">Nama Awal</string>
    <string name="akhir">Nama Akhir</string>
    <string name="hp">No HP</string>
    <string name="tgl_lhr">Tanggal Lahir</string>
    <string name="save">Simpan</string>
    <string name="username">Masukan Username</string>
    <string name="input_user">Username</string>
    <string name="akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="tambahgrup">Tambah Grup</string>


</resources>