<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/memo_baru"
    tools:context=".MemoFragment">

    <Button
        android:id="@+id/closeButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:drawableEnd="@drawable/silang"
        android:contentDescription="@string/setting"/>

    <TextView
        android:id="@+id/titlememo"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="73dp"
        android:gravity="center"
        android:text="@string/memo_baru"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/jdwl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlememo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/jadwal"
        android:textColor="@color/greyscale70"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlememo" />

    <ImageView
        android:id="@+id/kaleder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlememo"
        android:layout_marginStart="280dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/jdwl"
        android:background="@drawable/rectangle_background"
        android:src="@drawable/baseline_calendar_month_24"
        android:contentDescription="@string/setting"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/shortFormEditText"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_below="@+id/jdwl"
        android:layout_marginTop="20dp"
        android:hint="@string/judul"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/paragraphFormEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/shortFormEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/deskripsi"
        android:autofillHints="name"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/ket_prior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paragraphFormEditText"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/prior"
        android:textColor="@color/greyscale70"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraphFormEditText" />

    <LinearLayout
        android:id="@+id/tiga_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ket_prior"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <!--android:backgroundTint=""-->
        <Button
            android:id="@+id/btn_low"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/low"
            android:textColor="@color/primary500"
            android:textSize="11sp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary500" />

        <Button
            android:id="@+id/btn_med"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/medium"
            android:textAllCaps="false"
            android:textColor="@color/primary500"
            android:textSize="11sp"
            app:strokeColor="@color/primary500" />

        <Button
            android:id="@+id/btn_hi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/high"
            android:textAllCaps="false"
            android:textColor="@color/primary500"
            android:textSize="11sp"
            app:strokeColor="@color/primary500" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/reminderSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiga_button"
        android:layout_marginTop="16dp"
        android:text="@string/pengingat" />

    <Button
        android:id="@+id/btn_buat"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="47dp"
        android:text="@string/buat_memo"
        android:textColor="@color/primary500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary500" />


</RelativeLayout>