<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/task_baru"
    tools:context=".TugasActivity">

    <Button
        android:id="@+id/closeButton1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:drawableEnd="@drawable/silang"
        android:contentDescription="@string/buat_task"/>

    <TextView
        android:id="@+id/titletask"
        android:layout_width="234dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="73dp"
        android:gravity="center"
        android:text="@string/task_baru"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/jdwl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titletask"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/jadwal"
        android:textColor="@color/greyscale70"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletask" />

    <ImageView
        android:id="@+id/kaleder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titletask"
        android:layout_marginStart="280dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/jdwl2"
        android:background="@drawable/rectangle_background"
        android:src="@drawable/baseline_calendar_month_24"
        android:contentDescription="@string/buat_task"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/shortFormEditText2"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_below="@+id/jdwl2"
        android:layout_marginTop="20dp"
        android:hint="@string/judul"
        android:autofillHints="name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/paragraphFormEditText2"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_below="@id/shortFormEditText2"
        android:layout_marginTop="16dp"
        android:hint="@string/deskripsi"
        android:autofillHints="name"
        android:inputType="textMultiLine"/>

    <TextView
        android:id="@+id/ket_prior2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paragraphFormEditText2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/prior"
        android:textColor="@color/greyscale70"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraphFormEditText2" />

    <LinearLayout
        android:id="@+id/tiga_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ket_prior2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <!--android:backgroundTint=""-->
        <Button
            android:id="@+id/btn_low2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/low"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:textColor="@color/primary500"
            app:strokeColor="@color/primary500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_med2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/medium"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:textColor="@color/primary500"
            app:strokeColor="@color/primary500"/>

        <Button
            android:id="@+id/btn_hi2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/high"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:textColor="@color/primary500"
            app:strokeColor="@color/primary500" />
    </LinearLayout>

    <EditText
        android:id="@+id/undangan"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_below="@id/tiga_button2"
        android:layout_marginTop="6dp"
        android:hint="@string/undang"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:autofillHints="username"
        android:inputType="text"/>


    <ImageView
        android:id="@+id/tambah"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tiga_button2"
        android:layout_alignStart="@+id/undangan"
        android:layout_alignEnd="@+id/undangan"
        android:layout_marginStart="335dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/plus_kotak"
        android:contentDescription="@string/buat_task"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/reminderSwitch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/undangan"
        android:layout_marginTop="16dp"
        android:text="@string/pengingat" />

    <Button
        android:id="@+id/btn_buat2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="47dp"
        android:text="@string/buat_task"
        android:textColor="@color/primary500"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary500" />


</RelativeLayout>