<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".CatatanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/titleDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Judul -->
                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tim"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <!-- Deskripsi -->
                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl2"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prior"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <!-- Prioritas Medium dengan background kuning -->
                <TextView
                    android:id="@+id/textViewPriorityLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/medium"
                    android:textSize="14sp"
                    android:background="#FFFF00"/>


            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

    </LinearLayout>

</RelativeLayout>